[MIN] JDK 11 → 17 cleanups